client/src/components/Navbar/style.css
.navMenu{
    color: white;
}
/* #navAbout:hover{
    text-decoration: none;
} */

#navAbout, #navPort, #navContact, #stories{
    
    margin: 0 10px;
    line-height: 50px;
    height: 50px;
    /* margin-right: 15px; */
    position: relative;
    
    
    
}
.rowNav{
    width: 100vw;
}


.navDiv {
    /* width: 100%; */
    height: 50px;
    
}

.navbar-brand {
    /* margin-left: 15px; */
    font-weight: 200;
    display: block;
    padding: .5em 1.1em;
    font-size: 18px;
    /* width: 5em;
    height: 5em; */
    text-align: center;
    background-color: #28a745;
    /* background-color: #329760 */
    
}
#navbarNav ul{
    
    margin-bottom: 0;
}



.navbar-dark .navbar-brand {
    /* border-color:  yellow; */
    border-style: double;
    border-width: 4px;
    /* padding: 1rem; */
    margin: .2em;
    /* margin-left: 2em; */
    line-height: 1.2;
    
}
.navbar-dark .alzaLogo{
    margin-left: 2em;
}

.quote{
    font-style: italic;
    color: #ECCB65;
    font-size: 24px;
    margin-left: 20px;
}
.searchBox{
    margin-right: 2em;
}
.secondRow{
    margin-top: 7em;
    border-style: solid;
    border-color: white;
    border-width: 1pt 0;
}
.secondRowBox{
    border-style: solid;
    border-color: white;
    border-width: 1pt;
    margin: -9px 0px;
    text-align: center;
    padding: 2px 25px;
    
}

@media only screen and (max-width: 800px) {
    /* #navAbout:hover::after, #navPort:hover::after, #navContact:hover::after  {
        
        visibility: hidden;
    } */
    .secondRow{
        /* margin-top: 4em; */
        border: none;
        padding: 0;
        margin: 3.5em 0 0 0;
    }
    .searchInput{
        width: 100%;
        /* margin-left: 13px; */
    }
    .searchBox{
        /* margin-left: 10px; */
    }
    .secondRowBox{
        padding: 0px;
        margin: 0;
    }
    .navbar-brand{
        /* margin-left: 40vw; */
        padding: .25em .55em;
        font-size: 9px;
    }
    .navMenu{
        font-size: 9px;
        
    }
    .navMenuItems{
        margin-bottom: 2px;
    }
    #navAbout, #navPort, #navContact, #stories{
        margin: 1em;
        line-height: 0;
        height: 0;

    }
  }

